--- a/login.html
+++ b/login.html
@@ -16,8 +16,7 @@
         <div class="flex flex-col items-center w-full">
             <div class="card">
                 <h1 class="text-center text-2xl mb-5">LOGIN!</h1>
-                <div class="alert alert-success alert-dismissible">Password salah! Coba lagi
-                    <div class="close">x</div>
+                <div class="alert alert-success">Password salah! Coba lagi
                 </div>
                 <form class="form mb-2" autocomplete="off">
                     <div class="mb-5">
