--- a/lupa-password.html
+++ b/lupa-password.html
@@ -23,7 +23,7 @@
                         <input type="text" id="email" autofocus class="input" placeholder="Masukkan email anda...">
                     </div>
                     <div class="mb-5">
-                        <button class="btn btn-primary mt-2 w-full">Kirim</button>
+                        <button type="button" class="btn btn-primary mt-2 w-full">Kirim</button>
                     </div>
                 </form>
                 <a href="registrasi.html" class="link mb-2">Belum punya akun? Registrasi!</a>
