--- a/registrasi.html
+++ b/registrasi.html
@@ -46,7 +46,7 @@
                         </div>
                     </div>
                     <div class="mb-5 md:w-1/2 mx-auto">
-                        <button class="btn btn-primary mt-2 w-full">Daftar</button>
+                        <button type="button" class="btn btn-primary mt-2 w-full">Daftar</button>
                     </div>
                 </form>
                 <a href="lupa-password.html" class="link mb-2">Lupa Password!</a>
